p3/manifests/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-ingress
    namespace: argocd
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: argocd.local
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: argocd-server
                        port:
                            number: 80
