p3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-ingress
    namespace: argocd
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.tls.insecureSkipVerify: "true"
spec:
    rules:
        - host: localhost
          http:
            paths:
                - path: /argocd
                  pathType: Prefix
                  backend:
                    service:
                        name: argocd-server
                        port:
                            number: 443
