p3/manifests/playground_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: playground-ingress
    namespace: dev
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: localhost
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: playground-svc
                        port:
                            number: 8888
